[gd_scene load_steps=6 format=3 uid="uid://t40y55ou5jeb"]

[ext_resource type="Script" path="res://scripts/spawnManager.gd" id="1_qpr0h"]

[sub_resource type="QuadMesh" id="QuadMesh_6bruf"]
size = Vector2(1000, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wtc2u"]
size = Vector2(1000, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fo8dy"]
size = Vector2(45.5861, 105.58)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6ah6"]
size = Vector2(2188, 2445)

[node name="World" type="Node2D"]
script = ExtResource("1_qpr0h")

[node name="Platform" type="StaticBody2D" parent="."]
position = Vector2(200, 409)
scale = Vector2(-0.0723135, 0.272739)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Platform"]
modulate = Color(0.105882, 0.0901961, 0.0941176, 1)
mesh = SubResource("QuadMesh_6bruf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
shape = SubResource("RectangleShape2D_wtc2u")

[node name="Platform2" type="StaticBody2D" parent="."]
position = Vector2(631, 462)
scale = Vector2(-0.0723135, 0.272739)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Platform2"]
modulate = Color(0.105882, 0.0901961, 0.0941176, 1)
mesh = SubResource("QuadMesh_6bruf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform2"]
shape = SubResource("RectangleShape2D_wtc2u")

[node name="Platform3" type="StaticBody2D" parent="."]
position = Vector2(491, 405)
scale = Vector2(-0.0723135, 0.272739)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Platform3"]
modulate = Color(0.105882, 0.0901961, 0.0941176, 1)
mesh = SubResource("QuadMesh_6bruf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform3"]
shape = SubResource("RectangleShape2D_wtc2u")

[node name="Platform4" type="StaticBody2D" parent="."]
position = Vector2(349, 452)
scale = Vector2(-0.0723135, 0.272739)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Platform4"]
modulate = Color(0.105882, 0.0901961, 0.0941176, 1)
mesh = SubResource("QuadMesh_6bruf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform4"]
shape = SubResource("RectangleShape2D_wtc2u")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/playerRed.tscn", "res://scenes/playerGreen.tscn", "res://scenes/projectile.tscn")
spawn_path = NodePath("../Network")

[node name="0" type="Node2D" parent="."]
position = Vector2(201, 354)

[node name="1" type="Node2D" parent="."]
position = Vector2(632, 403)

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2

[node name="HOST" type="Button" parent="Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.421
anchor_right = 0.5
anchor_bottom = 0.421
offset_left = -51.0
offset_top = -15.808
offset_right = 51.0
offset_bottom = 15.192
grow_horizontal = 2
grow_vertical = 2
text = "HOST"

[node name="JOIN" type="Button" parent="Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.421
anchor_right = 0.5
anchor_bottom = 0.421
offset_left = -50.5
offset_top = 37.192
offset_right = 51.5
offset_bottom = 68.192
grow_horizontal = 2
grow_vertical = 2
text = "JOIN"

[node name="ComeBack" type="Area2D" parent="."]
position = Vector2(577, 648)
scale = Vector2(-57.6931, -2.09286)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ComeBack"]
position = Vector2(-0.95332, -89.8292)
shape = SubResource("RectangleShape2D_fo8dy")

[node name="Network" type="Node" parent="."]

[node name="BulletLimit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletLimit"]
visible = false
position = Vector2(577, -295.5)
shape = SubResource("RectangleShape2D_v6ah6")

[connection signal="pressed" from="Menu/HOST" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Menu/JOIN" to="." method="_on_join_pressed"]
[connection signal="body_entered" from="ComeBack" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="BulletLimit" to="." method="_on_bullet_limit_body_exited"]
